--- a/src/app/component/coins/coins.component.html
+++ b/src/app/component/coins/coins.component.html
@@ -1,5 +1,31 @@
 <p>coins works!</p>
 
-<div class="table">
-  <h5>Aqui vai a tabela</h5>
+<div class="coins">
+    <h1>Rastreador Criptográfico</h1>
+  <section>
+    <p>Tela para visualizar todas as criptomoedas listadas</p>
+  </section>
+    <div class="table">
+
+      <div class="card">
+        <p-table [value]="coins">
+          <ng-template pTemplate="header">
+              <tr>
+                <th pSortableColumn="id">Id <p-sortIcon field="id"></p-sortIcon></th>
+                  <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
+                  <th pSortableColumn="price">Preço <p-sortIcon field="price"></p-sortIcon></th>
+              </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-product>
+              <tr>
+                  <td>{{product.id}}</td>
+                  <td>{{product.name}}</td>
+                  <td>{{product.price | currency: 'USD'}}</td>
+              </tr>
+          </ng-template>
+      </p-table>
+    </div>
+
+
+    </div>
 </div>
